# claude-self-review-with-llm

./: .gitignore  NEXT_SESSION.md  README.md  api_key_loader.py  collect-project-context.sh  completion_orchestrator.py  config.json  debate_orchestrator.py  install.py  install.sh  intent_extractor.py  plugin.json  quota_monitor.py  review-code.sh  review-completion.sh  review-final.sh  review-plan.sh  review-test.sh  review_orchestrator.py  security.py  settings.json.template  state_manager.py  test_improvements.py  todo_state_detector.py  uninstall.sh
.github/: copilot-instructions.md
adapters/: __init__.py  base.py  claude_self.py  copilot.py  gemini.py
docs/plans/: 2025-12-01-self-review-system-design-v2.md  2025-12-01-self-review-system-design.md  2025-12-02-terminal-tetris-design.md
hook-test-cli/: Cargo.toml
hook-test-cli/src/: main.rs
mini-ssg/: requirements.txt
mini-ssg/content/: about.md  index.md
mini-ssg/mini_ssg/: __init__.py  builder.py  cli.py  server.py  template.py
mini-ssg/output/: about.html  index.html
mini-ssg/templates/: base.html
prompts/: code.txt  completion_external.txt  completion_self.txt  final.txt  plan.txt  test.txt
test/: tetris.py  tetris_terminal.py
test2/: snake_terminal.py
