[package]
name = "hook_test_cli"
version = "0.1.0"
edition = "2021"
description = "Hook system test CLI for evaluating Claude Code self-review"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "2"
chrono = "0.4"
